# my_python_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  release-and-publish.yml  test.yml
config/: __init__.py  logging_config.json  logging_config.yaml
docs/: best_practices.md  deployment.md  faq.md  index.md  path_management.md  usage.md
docs/advanced/: caching.md  integration_guide.md  performance_monitoring.md  validation.md
docs/development/: contributing.md  docker.md  project_structure.md  testing.md  version_management.md
docs/examples/: basic-usage.md  web-application.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: utilities.md
docs/user-guide/: config_management.md  logging.md  path_management.md
scripts/: init.py
src/my_python_project/: __init__.py  cli.py
src/my_python_project/utils/: __init__.py  cache.py  common.py  config_manager.py  exceptions.py  lazy_import.py  logging_utils.py  path_manager.py  performance.py  validators.py
tests/: conftest.py  test_app.py  test_cache.py  test_cli.py  test_common.py  test_config_manager.py  test_data_analysis.py  test_exceptions.py  test_imports_integration.py  test_integration.py  test_lazy_import.py  test_logging.py  test_module_functionality.py  test_my_python_project.py  test_path_manager.py  test_performance.py  test_validators.py  test_version.py
